--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         </div>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+    ></script>
     <!-- js -->
     <script src="assets/javascript/app.js"></script>
 </body>
